# programmiersprachen-aufgabenblatt-2

source/: CMakeLists.txt  circle.cpp  circle.hpp  clock.cpp  clockexample.cpp  color.cpp  color.hpp  example.cpp  mat2.cpp  rectangle.cpp  rectangle.hpp  tests.cpp  vec2.cpp  vec2.hpp
